<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity"
    android:background="@color/main_light_b">

    <RelativeLayout
        android:id="@+id/header_main"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/main_blue">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="-1dp"
            android:layout_toStartOf="@+id/signup_button"
            android:onClick="startLoginAct"
            android:text="Login" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="3dp"
            android:onClick="startSignUpAct"
            android:text="Sign Up" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="100dp"
            android:text="@string/welcome_text"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/letsDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="120dp"
            android:text="@string/lets_do"
            android:textColor="@color/white" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/header_main"
        android:layout_marginTop="-70dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settings_button"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="startSettingsAct"
                android:text="@string/set_but"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/devices_button"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="startDeviceAct"
                android:text="@string/dev_but"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/profile_button"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="startProfileAct"
                android:text="@string/prof_but"
                android:textColor="@color/black" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notif_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tools" />

</RelativeLayout>